# companion

./: README.md  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build.yml
sidecar/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
sidecar/scripts/: dev-setup.sh
sidecar/sidecar/: package.json  tsconfig.json
sidecar/sidecar/src/: pipeline.ts
sidecar/src/: App.tsx  index.css  index.ts  pipeline.ts
sidecar/src-tauri/: Cargo.toml
sidecar/src-tauri/src/: error.rs  lib.rs  main.rs
sidecar/src-tauri/src/commands/: overlay.rs  stats.rs
sidecar/src/center/: CenterApp.tsx
sidecar/src/hooks/: useCompanionState.ts  useTauriEvent.ts
sidecar/src/lib/: tauri.ts
sidecar/src/onboarding/: OnboardingApp.tsx  ProcessingStep.tsx  UploadStep.tsx
sidecar/src/overlay/: CompanionSprite.tsx  DragController.tsx  InteractionLayer.tsx  OverlayApp.tsx  ParticleLayer.tsx
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: companion.rs  mod.rs  overlay.rs  pipeline.rs  settings.rs
src-tauri/src/db/: mod.rs  schema.rs  stats.rs
src-tauri/src/overlay/: mod.rs
src-tauri/src/startup/: mod.rs
src-tauri/src/state/: fsm.rs
src/center/pages/: Appearance.tsx  BehaviorPage.tsx  Statistics.tsx
src/lib/: constants.ts  tauri.ts
src/onboarding/: BuiltinPickerStep.tsx  NameStep.tsx  SourceStep.tsx  UploadStep.tsx  WelcomeStep.tsx
src/overlay/: SpriteAnimator.ts
src/stores/: companionStore.ts  overlayStore.ts  settingsStore.ts  statsStore.ts
(+8 files in other folders)
